RiffleFrontend/src/styles/member.css
@import url("./anakPaud.css");
@import url("./dialog.css");

.background {
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: gold;
    background-image: url("./imgs/CubePattern-FHD-Macey11.jpg");
    filter: sepia(0.5);
}

.screen {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    font-size: 9vmin;
    font-family: "Anak Paud", cursive;
    text-align: center;
    user-select: none;

    p {
        font-size: 0.75em;
    }

    input, button {
        border: 1px solid black;
        background-color: #FFFFFF30;
        font: inherit;
        width: 90%;
        text-align: center;
        margin: 10px;
        padding: 0;
    }

    input {
        font-family: sans-serif;
        font-weight: bold;
    }

    button {
        border-radius: 1vw;
    }
    
    input:disabled, button:disabled {
        background-color: #FFFFFF90;
        color: #606060;
        cursor: default;
    }

}

input {
    cursor: text;
}

button {
    cursor: pointer;
}

button.radio-sel {
    background-color: #0000FF30;
}

.columns {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.col {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

